--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -18,7 +18,7 @@ on:
     # The branches below must be a subset of the branches above
     branches: [ master ]
   schedule:
-    - cron: '24 16 * * 2'
+    - cron: '0 10 1 * *' # At 10:00 on day-of-month 1.
 
 jobs:
   analyze:
