--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -12,7 +12,7 @@ updates:
     assignees:
       - "w0rmr1d3r"
     labels:
-      - "vuln"
+      - "bump"
     reviewers:
       - "w0rmr1d3r"
   - package-ecosystem: "github-actions"
@@ -22,6 +22,6 @@ updates:
     assignees:
       - "w0rmr1d3r"
     labels:
-      - "vuln"
+      - "bump"
     reviewers:
       - "w0rmr1d3r"
