--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
       matrix:
         python-version: ['3.10']
 
-    name: Python ${{ matrix.python-version }}
+    name: CI
 
     steps:
       - uses: actions/checkout@v2
