--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,4 +25,8 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - run: make build
+      - name: Install dev dependencies
+        run: make install-dev
+
+      - name: Run test
+        run: make test
