--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,14 +2,14 @@ sonar.projectKey=w0rmr1d3r_cloner
 sonar.organization=w0rmr1d3r
 
 # folder where your source code lives
-sonar.sources=cloner
+sonar.sources=./cloner
 
 # folder where your tests live
-sonar.tests=tests
+sonar.tests=./tests
 
 # test reports and coverage
-sonar.python.xunit.reportPath=build/test.xml
-sonar.python.coverage.reportPaths=build/coverage.xml
+sonar.python.xunit.reportPath=./build/test.xml
+sonar.python.coverage.reportPaths=./build/coverage.xml
 
 # language
 sonar.language=py
