--- a/.github/workflows/acceptance.yml
+++ b/.github/workflows/acceptance.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Acceptance
 
 on:
   push:
@@ -15,7 +15,7 @@ jobs:
       matrix:
         python-version: ['3.10']
 
-    name: CI
+    name: Clone octocat
 
     steps:
       - uses: actions/checkout@v3
