--- a/.github/workflows/acceptance.yml
+++ b/.github/workflows/acceptance.yml
@@ -15,7 +15,7 @@ jobs:
       matrix:
         python-version: ['3.10']
 
-    name: Clone octocat
+    name: Latest release to clone octocat
 
     steps:
       - uses: actions/checkout@v3
@@ -25,8 +25,8 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Install dependencies
-        run: make install
+      - name: Install wr-cloner
+        run: pip install wr-cloner
 
       - name: Clone an organization
         run: cloner octocat
