--- a/.github/workflows/acceptance.yml
+++ b/.github/workflows/acceptance.yml
@@ -15,7 +15,7 @@ jobs:
       matrix:
         python-version: ['3.10']
 
-    name: Latest release to clone GitHub
+    name: Acceptance test
 
     steps:
       - uses: actions/checkout@v3
@@ -25,14 +25,14 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Install wr-cloner
-        run: pip install wr-cloner
+      - name: Create virtualenv
+        run: python3 -m venv test-env
+
+      - name: Activate virtualenv
+        run: source test-env/bin/activate
+
+      - name: Install dependencies
+        run: make install
 
       - name: Clone an organization
-        run: cloner github
-
-      - name: Check number of repos is correct
-        run: ls repos
-
-      - name: Check number of repos is correct
-        run: ls repos | wc -l
+        run: cloner --logging DEBUG holaluz
