update CI and coverage

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
       matrix:
         python-version: ['3.8', '3.9', '3.10', '3.11']
 
-    name: CI
+    name: CI ${{ matrix.python-version }}
 
     steps:
       - uses: actions/checkout@v3
