--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -13,9 +13,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ['3.10']
+        python-version: ['3.9', '3.10']
 
-    name: Coverage
+    name: Coverage ${{ matrix.python-version }}
 
     steps:
       - uses: actions/checkout@v3
