--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -10,13 +10,6 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-    strategy:
-      fail-fast: false
-      matrix:
-        python-version: ['3.9', '3.10', '3.11']
-
-    name: Coverage ${{ matrix.python-version }}
-
     steps:
       - uses: actions/checkout@v3
         with:
@@ -25,7 +18,7 @@ jobs:
       - name: Setup python
         uses: actions/setup-python@v4
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: '3.9'
 
       - name: Install dev dependencies
         run: make install-dev
