--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -4,6 +4,8 @@
 #
 #    make freeze-dev
 #
+astroid==2.13.3
+    # via pylint
 attrs==22.2.0
     # via pytest
 black==22.12.0
@@ -21,6 +23,8 @@ click==8.1.3
     #   wr-cloner (setup.py)
 coverage==7.0.5
     # via wr-cloner (setup.py)
+dill==0.3.6
+    # via pylint
 exceptiongroup==1.1.0
     # via pytest
 faker==16.6.0
@@ -32,9 +36,15 @@ idna==3.4
 iniconfig==2.0.0
     # via pytest
 isort==5.11.4
-    # via wr-cloner (setup.py)
+    # via
+    #   pylint
+    #   wr-cloner (setup.py)
+lazy-object-proxy==1.9.0
+    # via astroid
 mccabe==0.7.0
-    # via flake8
+    # via
+    #   flake8
+    #   pylint
 mypy-extensions==0.4.3
     # via black
 packaging==23.0
@@ -46,13 +56,17 @@ pathspec==0.10.3
 pip-tools==6.12.1
     # via wr-cloner (setup.py)
 platformdirs==2.6.2
-    # via black
+    # via
+    #   black
+    #   pylint
 pluggy==1.0.0
     # via pytest
 pycodestyle==2.10.0
     # via flake8
 pyflakes==3.0.1
     # via flake8
+pylint==2.15.10
+    # via wr-cloner (setup.py)
 pyproject-hooks==1.0.0
     # via build
 pytest==7.2.1
@@ -73,17 +87,25 @@ tomli==2.0.1
     # via
     #   black
     #   build
+    #   pylint
     #   pytest
+tomlkit==0.11.6
+    # via pylint
 types-toml==0.10.8.1
     # via responses
 typing-extensions==4.4.0
-    # via black
+    # via
+    #   astroid
+    #   black
+    #   pylint
 urllib3==1.26.14
     # via
     #   requests
     #   responses
 wheel==0.38.4
     # via pip-tools
+wrapt==1.14.1
+    # via astroid
 
 # The following packages are considered to be unsafe in a requirements file:
 # pip
