--- a/requirements.txt
+++ b/requirements.txt
@@ -9,10 +9,10 @@ certifi==2022.12.7
 charset-normalizer==3.0.1
     # via requests
 click==8.1.3
-    # via wr-cloner (setup.py)
+    # via wr-cloner (pyproject.toml)
 idna==3.4
     # via requests
 requests==2.28.2
-    # via wr-cloner (setup.py)
+    # via wr-cloner (pyproject.toml)
 urllib3==1.26.14
     # via requests
