--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ requires-python = ">=3.9.0"
 # Always try to be compatible with these versions and above
 dependencies = [
     "click>=8.0.3",
+    "psutil>=5.9.4",
     "requests>=2.27.1"
 ]
 
