--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,8 @@ click==8.1.3
     # via wr-cloner (pyproject.toml)
 idna==3.4
     # via requests
+psutil==5.9.4
+    # via wr-cloner (pyproject.toml)
 requests==2.28.2
     # via wr-cloner (pyproject.toml)
 urllib3==1.26.14
