--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -14,8 +14,10 @@ build==0.10.0
     # via pip-tools
 certifi==2022.12.7
     # via requests
-charset-normalizer==3.0.1
-    # via requests
+charset-normalizer==2.1.1
+    # via
+    #   docformatter
+    #   requests
 click==8.1.3
     # via
     #   black
@@ -25,6 +27,8 @@ coverage==7.0.5
     # via wr-cloner (pyproject.toml)
 dill==0.3.6
     # via pylint
+docformatter==1.5.1
+    # via wr-cloner (pyproject.toml)
 exceptiongroup==1.1.0
     # via pytest
 faker==16.6.0
@@ -87,6 +91,7 @@ tomli==2.0.1
     # via
     #   black
     #   build
+    #   docformatter
     #   pylint
     #   pytest
 tomlkit==0.11.6
@@ -98,6 +103,8 @@ typing-extensions==4.4.0
     #   astroid
     #   black
     #   pylint
+untokenize==0.1.1
+    # via docformatter
 urllib3==1.26.14
     # via
     #   requests
