--- a/requirements.txt
+++ b/requirements.txt
@@ -10,9 +10,13 @@ charset-normalizer==3.0.1
     # via requests
 click==8.1.3
     # via wr-cloner (pyproject.toml)
+deprecated==1.2.13
+    # via wr-cloner (pyproject.toml)
 idna==3.4
     # via requests
 requests==2.28.2
     # via wr-cloner (pyproject.toml)
 urllib3==1.26.14
     # via requests
+wrapt==1.14.1
+    # via deprecated
