--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -25,6 +25,8 @@ click==8.1.3
     #   wr-cloner (pyproject.toml)
 coverage==7.0.5
     # via wr-cloner (pyproject.toml)
+deprecated==1.2.13
+    # via wr-cloner (pyproject.toml)
 dill==0.3.6
     # via pylint
 docformatter==1.5.1
@@ -112,7 +114,9 @@ urllib3==1.26.14
 wheel==0.38.4
     # via pip-tools
 wrapt==1.14.1
-    # via astroid
+    # via
+    #   astroid
+    #   deprecated
 
 # The following packages are considered to be unsafe in a requirements file:
 # pip
