--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -8,6 +8,8 @@ astroid==2.14.2
     # via pylint
 attrs==22.2.0
     # via pytest
+autoflake==2.0.1
+    # via wr-cloner (pyproject.toml)
 black==22.12.0
     # via wr-cloner (pyproject.toml)
 build==0.10.0
@@ -70,7 +72,9 @@ pluggy==1.0.0
 pycodestyle==2.10.0
     # via flake8
 pyflakes==3.0.1
-    # via flake8
+    # via
+    #   autoflake
+    #   flake8
 pylint==2.16.1
     # via wr-cloner (pyproject.toml)
 pyproject-hooks==1.0.0
@@ -91,6 +95,7 @@ toml==0.10.2
     # via responses
 tomli==2.0.1
     # via
+    #   autoflake
     #   black
     #   build
     #   docformatter
