addjust release drafter for dependabot

--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -9,7 +9,7 @@ categories:
       - 'documentation'
   - title: 'Bumps'
     labels:
-      - 'bump'
+      - 'dependencies'
 version-resolver:
   major:
     labels:
