--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,17 +45,15 @@ dependencies = [
 [project.optional-dependencies]
 # Always try to be compatible with these versions and above
 dev = [
-    "autoflake>=2.0.0",
     "black>=22.3.0",
     "coverage>=6.3.2",
     "docformatter>=1.5.1",
     "faker>=12.0.1",
-    "flake8>=6.0.0",
-    "isort>=5.10.0",
     "pip-tools>=6.5.0",
     "pylint>=2.15.10",
     "pytest>=6.2.5",
-    "responses>=0.20.0"
+    "responses>=0.20.0",
+    "ruff>=0.0.270"
 ]
 
 [project.scripts]
@@ -81,12 +79,9 @@ exclude = '''
 )/
 '''
 
-[tool.isort]
-multi_line_output = 3
-include_trailing_comma = true
-force_grid_wrap = 0
-combine_as_imports = true
-line_length = 120
+[tool.ruff]
+select = ["E", "F", "I"]
+line-length = 120
 
 [tool.pylint.'MESSAGES CONTROL']
 # C0114 - missing module docstring - does not apply (yet)
