--- a/pyproject.toml
+++ b/pyproject.toml
@@ -88,3 +88,8 @@ line-length = 120
 disable = "C0114"
 fail-under = 8
 max-line-length = 120
+
+[tool.docformatter]
+recursive = true
+wrap-summaries = 90
+wrap-descriptions = 90
