--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,15 +38,15 @@ jobs:
       - run-ci
 
     steps:
-#      - uses: actions/checkout@v4
-#
-#      - name: Setup python
-#        uses: actions/setup-python@v5
-#        with:
-#          python-version: '3.9'
-#
-#      - name: Install dev dependencies
-#        run: make install-dev
+      - uses: actions/checkout@v4
+
+      - name: Setup python
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - name: Install dev dependencies
+        run: make install-dev
 
       - name: PyLint Check
         run: make py-lint
