--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -25,15 +25,8 @@ jobs:
       - name: Build project
         run: python3 -m build
 
-      - name: Publish package to TestPyPI
-        uses: pypa/gh-action-pypi-publish@release/v1.5
-        with:
-          user: __token__
-          password: ${{ secrets.TEST_PYPI_API_TOKEN }}
-          repository_url: https://test.pypi.org/legacy/
-
       - name: Publish package to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1.5
-        with:
-          user: __token__
-          password: ${{ secrets.PYPI_API_TOKEN }}
+        #with:
+        #  user: __token__
+        #  password: ${{ secrets.PYPI_API_TOKEN }}
