--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -7,6 +7,11 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    environment:
+      name: pypi
+      url: https://pypi.org/p/wr-cloner
+    permissions:
+      id-token: write
 
     steps:
       - uses: actions/checkout@v4
@@ -26,7 +31,4 @@ jobs:
         run: python3 -m build
 
       - name: Publish package to PyPI
-        uses: pypa/gh-action-pypi-publish@release/v1.5
-        #with:
-        #  user: __token__
-        #  password: ${{ secrets.PYPI_API_TOKEN }}
+        uses: pypa/gh-action-pypi-publish@release/v1
