--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,7 +51,6 @@ dev = [
     "coverage>=6.3.2",
     "faker>=12.0.1",
     "pip-tools>=6.5.0",
-    "pylint>=2.15.10",
     "pytest>=6.2.5",
     "responses>=0.20.0",
     "ruff==0.9.2" # still in 0.x introducing breaking changes
@@ -82,6 +81,7 @@ select = [
     "I", # isort
     "RUF", # ruff specific rules
     "D", # pydocstyle
+    "PL", # pylint - not 100% implemented, see: https://github.com/astral-sh/ruff/issues/970
 ]
 
 ignore = [
@@ -99,7 +99,10 @@ fixable = ["ALL"]
 preview = true
 
 [tool.ruff.lint.per-file-ignores]
-"*test*.py" = ["D"] # ignore all docstring lints in tests
+"*test*.py" = [
+    "D", # ignore all docstring lints in tests
+    "PLR2004", # ignore magic numbers rule in tests
+]
 
 [tool.ruff.format]
 quote-style = "double"
@@ -116,10 +119,3 @@ docstring-code-format = true
 # This only has an effect when the `docstring-code-format` setting is
 # enabled.
 docstring-code-line-length = 90
-
-
-[tool.pylint.'MESSAGES CONTROL']
-# C0114 - missing module docstring - does not apply (yet)
-disable = "C0114"
-fail-under = 8
-max-line-length = 120
