--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -13,8 +13,7 @@ on:
   # pull_request_target:
   #   types: [opened, reopened, synchronize]
 
-permissions:
-  contents: read
+permissions: read-all
 
 jobs:
   update_release_draft:
