--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -24,7 +24,7 @@ jobs:
           python-version: '3.9'
 
       - name: Install build dependencies
-        run: pip install build==1.2.2
+        run: make install-build
 
       - name: Build project
         run: python3 -m build
