--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -16,8 +16,6 @@ click==8.1.8
     #   wr-cloner (pyproject.toml)
 coverage==7.6.12
     # via wr-cloner (pyproject.toml)
-deprecated==1.2.18
-    # via wr-cloner (pyproject.toml)
 exceptiongroup==1.2.2
     # via pytest
 faker==36.1.1
@@ -42,8 +40,6 @@ pyproject-hooks==1.2.0
     #   pip-tools
 pytest==8.3.4
     # via wr-cloner (pyproject.toml)
-python-dateutil==2.9.0.post0
-    # via faker
 pyyaml==6.0.2
     # via responses
 requests==2.32.3
@@ -54,21 +50,19 @@ responses==0.25.6
     # via wr-cloner (pyproject.toml)
 ruff==0.9.2
     # via wr-cloner (pyproject.toml)
-six==1.17.0
-    # via python-dateutil
 tomli==2.2.1
     # via
     #   build
     #   pip-tools
     #   pytest
+tzdata==2025.1
+    # via faker
 urllib3==1.26.20
     # via
     #   requests
     #   responses
 wheel==0.45.1
     # via pip-tools
-wrapt==1.17.2
-    # via deprecated
 zipp==3.21.0
     # via importlib-metadata
 
