--- a/requirements-build.txt
+++ b/requirements-build.txt
@@ -4,7 +4,7 @@
 #
 #    make freeze-build
 #
-build==1.2.2.post1
+build==1.2.2
     # via wr-cloner (pyproject.toml)
 certifi==2025.1.31
     # via requests
