--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,7 +41,6 @@ requires-python = ">=3.9.0"
 # Always try to be compatible with these versions and above
 dependencies = [
     "click>=8.0.3",
-    "Deprecated>=1.2.13",
     "requests>=2.27.1"
 ]
 
@@ -54,6 +53,9 @@ dev = [
     "pytest>=6.2.5",
     "responses>=0.20.0",
     "ruff==0.9.2" # still in 0.x introducing breaking changes
+]
+build = [
+    "build~=1.0"
 ]
 
 [project.scripts]
